Reduced font size for the mobile genre list to prevent text wrapping

--- a/css/style.css
+++ b/css/style.css
@@ -874,7 +874,7 @@ a:active {
 .genrelist-mobile {
     color: #FFF;
     padding: 1em;
-    font-size: 6.2vw;
+    font-size: 6vw;
 }
 
 .genrelist-mobile h1 {
